test/spec/loop.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/loop.wast
(;; STDOUT ;;;
out/third_party/testsuite/loop.wast:254: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: EndFunctionBody callback failed
out/third_party/testsuite/loop.wast:258: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: EndFunctionBody callback failed
out/third_party/testsuite/loop.wast:262: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: EndFunctionBody callback failed
out/third_party/testsuite/loop.wast:266: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001c: EndFunctionBody callback failed
out/third_party/testsuite/loop.wast:271: assert_invalid passed:
  error: type stack at end of loop is 1, expected 0
  error: @0x0000001c: OnEndExpr callback failed
out/third_party/testsuite/loop.wast:277: assert_invalid passed:
  error: type stack size too small at loop. got 0, expected at least 1
  error: @0x0000001b: OnEndExpr callback failed
out/third_party/testsuite/loop.wast:283: assert_invalid passed:
  error: type stack size too small at loop. got 0, expected at least 1
  error: @0x0000001c: OnEndExpr callback failed
out/third_party/testsuite/loop.wast:289: assert_invalid passed:
  error: type mismatch in loop, expected i32 but got f32.
  error: @0x00000020: OnEndExpr callback failed
out/third_party/testsuite/loop.wast:295: assert_invalid passed:
  error: type mismatch in implicit return, expected i32 but got i64.
  error: @0x00000020: EndFunctionBody callback failed
out/third_party/testsuite/loop.wast:303: assert_malformed passed:
  out/third_party/testsuite/loop/loop.10.wast:1:16: unexpected label "$l"
  (func loop end $l)
                 ^^
out/third_party/testsuite/loop.wast:307: assert_malformed passed:
  out/third_party/testsuite/loop/loop.11.wast:1:19: mismatching label "$a" != "$l"
  (func loop $a end $l)
                    ^^
53/53 tests passed.
;;; STDOUT ;;)
